[gd_scene load_steps=2 format=3 uid="uid://cwnah50iuq62x"]

[ext_resource type="Script" path="res://Scenes/Menu/pause_menu.gd" id="1_bttxp"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bttxp")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.333
anchor_top = 0.3
anchor_right = 0.667
anchor_bottom = 0.6
grow_horizontal = 2

[node name="GridContainer" type="GridContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.5
anchor_right = 0.9
anchor_bottom = 0.5
offset_top = -52.5
offset_bottom = 52.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 64
columns = 2

[node name="VolumeLabel" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="Panel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
value = 100.0
ticks_on_borders = true

[node name="ResolutionLabel" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
text = "Resolution"

[node name="ResolutionOptions" type="OptionButton" parent="Panel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FullScreenLabel" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
text = "Full Screen"

[node name="FullScreenCheckBox" type="CheckBox" parent="Panel/GridContainer"]
layout_mode = 2

[node name="ControlsLabel" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
text = "Controls"

[connection signal="value_changed" from="Panel/GridContainer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="item_selected" from="Panel/GridContainer/ResolutionOptions" to="." method="_on_resolution_options_item_selected"]
[connection signal="toggled" from="Panel/GridContainer/FullScreenCheckBox" to="." method="_on_full_screen_check_box_toggled"]
